tests/baselines/reference/parserIndexMemberDeclaration5.errors.txt
==== tests/cases/compiler/parserIndexMemberDeclaration5.ts (1 errors) ====
    class C {
       [a: string]: number public v: number
                           ~~~~~~
!!! parserIndexMemberDeclaration5.ts(2,24): error TS1005: ';' expected.
    }